--- a/VFW_1209/seago_wesley_project3/css/styles.css
+++ b/VFW_1209/seago_wesley_project3/css/styles.css
@@ -13,6 +13,45 @@ Medicine Tracker
 	border-radius: 6px;
 }
 
+.button {
+	margin: 0px 5px;
+	padding: 5px 24px;
+	background-color: #9CB3C3;
+	border: 2px solid black;
+	border-radius: 20px;
+	text-decoration: none;
+	text-shadow: 1px 1px 1px #ffffff;
+	font: bold 0.8em Arial, Helvetica, sans-serif;
+	color: black;
+	font-size: 14pt;
+}
+
+.buttonRed {
+	margin: 0px 5px;
+	padding: 5px 14px 5px 16px;
+	background-color: #D82423;
+	border: 2px solid black;
+	border-radius: 20px;
+	color: black;
+	text-decoration: none;
+	text-shadow: 1px 1px 1px #ffffff;
+	font: bold 0.8em Arial, Helvetica, sans-serif;
+	font-size: 14pt;
+}
+
+.buttonGreen {
+	margin: 0px 5px;
+	padding: 5px 37px;
+	background-color: #09A603;
+	border: 2px solid black;
+	border-radius: 20px;
+	color: black;
+	text-decoration: none;
+	text-shadow: 1px 1px 1px #ffffff;
+	font: bold 0.8em Arial, Helvetica, sans-serif;
+	font-size: 14pt;
+}
+
 #container ul{
 	list-style-type: none;
 	padding: 0;
