Added red style for validation.

--- a/VFW_1209/seago_wesley_project3/css/styles.css
+++ b/VFW_1209/seago_wesley_project3/css/styles.css
@@ -91,6 +91,10 @@ Medicine Tracker
 	text-align: center;
 }
 
+#errors {
+	color: red;
+}
+
 #footer {
 	background-color: #7FB2F0;
 	padding-top: 10px;
