--- a/VFW_1209/seago_wesley_project4/css/styles.css
+++ b/VFW_1209/seago_wesley_project4/css/styles.css
@@ -5,6 +5,12 @@ Project 4
 Medicine Tracker 
 */
 
+ul {
+	list-style-type: none;
+	text-align: left;
+	padding-left: 0px;
+}
+
 #container {
 	background-color: #7FB2F0;
 	font-family: Arial, Helvetica, sans-serif; 
@@ -53,7 +59,6 @@ Medicine Tracker
 }
 
 #container ul{
-	list-style-type: none;
 	padding: 0;
 	margin-left: 0;
 }
