--- a/VFW_1209/seago_wesley_project4/css/styles.css
+++ b/VFW_1209/seago_wesley_project4/css/styles.css
@@ -11,6 +11,12 @@ ul {
 	padding-left: 0px;
 }
 
+li {
+	padding-left: 0px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
 #container {
 	background-color: #7FB2F0;
 	font-family: Arial, Helvetica, sans-serif; 
