--- a/miu_1210/seago_wesley_project1/css/styles.css
+++ b/miu_1210/seago_wesley_project1/css/styles.css
@@ -5,24 +5,115 @@ Project 1
 Medicine Tracker 
 */
 
-ul {
-	list-style-type: none;
-	text-align: left;
-	padding-left: 0px;
-}
-
-li {
-	padding-left: 0px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-}
-
 #container {
 	background-color: #7FB2F0;
 	font-family: Arial, Helvetica, sans-serif; 
 	overflow: scroll;
 	border: 2px solid black;
 	border-radius: 6px;
+}
+
+#container2 {
+	font-family: Arial, Helvetica, sans-serif;
+	overflow: scroll;
+	border: 2px solid black;
+	border-radius: 6px;
+}
+
+#container ul{
+	padding: 0;
+	margin-left: 0;
+}
+
+#header {
+	background-color: #7FB2F0;
+	border: 1px solid black;
+	text-align: center;
+	color: #000000;
+	text-shadow: 1px 1px 1px #ffffff;
+}
+
+#intro {
+	background-color: #ADD5F7;
+    height:100%;
+	padding-top: 10px;
+	border: 1px solid black;
+	text-align: center;
+}
+
+#article {
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	background-color: #ADD5F7;
+	border: 1px solid black;
+}
+
+#article2 {
+	background-color: #ADD5F7;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	text-align: center;
+}
+
+#errors {
+	color: red;
+}
+
+#searchbox {
+	background-color: #ADD5F7;
+	text-align: center;
+	border: 1px solid black;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+#browsebox {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+	color: #000000;
+	text-shadow: 1px 1px 1px #ffffff;
+}
+
+#browsename {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+}
+
+#browsemed {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+}
+
+#browsetype {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+}
+
+#browseresearch {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+}
+
+#footer {
+	background-color: #7FB2F0;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	color: #000000;
+	border: 1px solid black;
 }
 
 .button {
@@ -64,55 +155,16 @@ li {
 	font-size: 14pt;
 }
 
-#container ul{
-	padding: 0;
-	margin-left: 0;
+ul {
+	list-style-type: none;
+	text-align: left;
+	padding-left: 0px;
 }
 
-#header {
-	background-color: #7FB2F0;
-	border: 1px solid black;
-	text-align: center;
-	color: #000000;
-	text-shadow: 1px 1px 1px #ffffff;
-}
-
-#intro {
-	background-color: #ADD5F7;
-	padding-top: 10px;
-	border: 1px solid black;
-	text-align: center;
-}
-
-#article {
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	background-color: #ADD5F7;
-	border: 1px solid black;
-}
-
-#article2 {
-	background-color: #ADD5F7;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	text-align: center;
-}
-
-#errors {
-	color: red;
-}
-
-#footer {
-	background-color: #7FB2F0;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-	color: #000000;
-	border: 1px solid black;
+li {
+	padding-left: 0px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 
