--- a/miu_1210/seago_wesley_project1/css/styles.css
+++ b/miu_1210/seago_wesley_project1/css/styles.css
@@ -114,6 +114,13 @@ Medicine Tracker
 	display: block;
 }
 
+#browsedate {
+	background-color: #ADD5F7;
+	border: 1px solid black;
+	padding-left: 5px;
+	display: block;
+}
+
 #footer {
 	background-color: #7FB2F0;
 	padding-top: 10px;
