--- a/miu_1210/seago_wesley_project3/Bronze/css/style.css
+++ b/miu_1210/seago_wesley_project3/Bronze/css/style.css
@@ -4,7 +4,10 @@
 // Med Tracker
 */
 
-#bimage {height: 206px;}
+#bimage {
+	height: 206px;
+	text-align: center;
+}
 
 #name .ui-grid-b div{text-align: center;}
 
