--- a/miu_1210/seago_wesley_project3/Gold/css/style.css
+++ b/miu_1210/seago_wesley_project3/Gold/css/style.css
@@ -1,6 +1,12 @@
 /* 
 Wesley Seago
 MIU Term 1210
-Project 2
+Project 3
 Med Tracker
 */
+
+#home {
+	text-align: center;
+}
+
+label.error{display: block; margin: 10px 0px; color: red;}
