--- a/miu_1210/seago_wesley_project3/Gold/css/style.css
+++ b/miu_1210/seago_wesley_project3/Gold/css/style.css
@@ -12,5 +12,5 @@ Med Tracker
 label.error{display: block; margin: 10px 0px; color: red;}
 
 #items {
-	background-color: skyblue;
+	background-color: #ADD5F7;
 }
