--- a/miu_1210/seago_wesley_project4/Bronze/css/styles.css
+++ b/miu_1210/seago_wesley_project4/Bronze/css/styles.css
@@ -1,9 +1,10 @@
 /*
 Wesley Seago
 MIU Term 1210
-Project 2
+Project 4
 Medicine Tracker 
 */
+
 
 #container {
 	background-color: #7FB2F0;
@@ -28,7 +29,7 @@ Medicine Tracker
 }
 
 #header {
-	background-color: #7FB2F0;
+	background-color: #519BDA;
 	border: 1px solid black;
 	text-align: center;
 	color: #000000;
@@ -52,12 +53,12 @@ Medicine Tracker
 	padding-right: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
-	background-color: #ADD5F7;
+	background-color: #78CFFF;
 	border: 1px solid black;
 }
 
 #article2 {
-	background-color: #ADD5F7;
+	background-color: #78CFFF;
 	padding-top: 10px;
 	padding-right: 10px;
 	padding-bottom: 10px;
@@ -122,7 +123,7 @@ Medicine Tracker
 }
 
 #footer {
-	background-color: #7FB2F0;
+	background-color: #519BDA;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	text-align: center;
