--- a/miu_1210/seago_wesley_project4/Gold/css/style.css
+++ b/miu_1210/seago_wesley_project4/Gold/css/style.css
@@ -1,7 +1,7 @@
 /* 
 Wesley Seago
 MIU Term 1210
-Project 3
+Project 4
 Med Tracker
 */
 
@@ -13,4 +13,12 @@ label.error{display: block; margin: 10px 0px; color: red;}
 
 #items {
 	background-color: #ADD5F7;
+}
+
+#mainheader {
+	padding: 3px;
+}
+
+#mainheader h1 {
+	margin-left: 1px;
 }
