--- a/miu_1210/seago_wesley_project1/css/styles.css
+++ b/miu_1210/seago_wesley_project1/css/styles.css
@@ -143,6 +143,19 @@ Medicine Tracker
 	font-size: 14pt;
 }
 
+.button2 {
+	margin: 0px 5px;
+	padding: 5px 24px;
+	background-color: #9CB3C3;
+	border: 2px solid black;
+	border-radius: 6px;
+	text-decoration: none;
+	text-shadow: 1px 1px 1px #ffffff;
+	font: bold 0.8em Arial, Helvetica, sans-serif;
+	color: black;
+	font-size: 14pt;
+}
+
 .buttonRed {
 	margin: 0px 5px;
 	padding: 5px 14px 5px 16px;
